[package]
name = "echo-server"
version = "0.1.0"
authors = ["Tobias Moldan <tobias.moldan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["rt-core", "macros"] }
warp = "0.2"